# tee-logger

./: .gitignore  README.md  Tee_Logger.py  benchmarkBinTextPerformance.py  benchmarkPerformance.py  benchmarkXZPresetPerformance.py  pyproject.toml
src/: Tee_Logger.py
tests/: test_caller_info.py  test_doctest.py
